--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<li>
 							<ul class="address-text">
 								<li><b>我的博客 </b></li>
-								<li><a href="https://blog.csdn.net/weixin_47431459?spm=1000.2115.3001.5343">CSDN</a></li>
+								<li><a href="https://blog.csdn.net/weixin_47431459?spm=1000.2115.3001.5343">查看</a></li>
 							</ul>
 						</li>
 					</ul>
