--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div class="col-md-8 header-right">
 					<h2>Hello</h2>
 					<h1>My name is YJlio</h1>
-					<h6>大数据技术实习生</h6>
+					<h6>感谢您在百忙之中，查看我的简历!</h6>
 					<ul class="address">
 						<li>
 							<ul class="address-text">
@@ -89,7 +89,7 @@
 						<li>
 							<ul class="address-text">
 								<li><b>求职意向 </b></li>
-								<li>后端开发</li>
+								<li>运维</li>
 							</ul>
 						</li>
 						<li>
@@ -121,7 +121,7 @@
 						<li><a href="#work" class="scroll">个人经历</a></li>
 						<li><a href="#education" class="scroll">教育背景</a></li>
 						<li><a href="#skills" class="scroll">专业技能</a></li>
-						<li><a href="#projects" class="scroll">部分作品</a></li>
+						<li><a href="#projects" class="scroll">毕业证书</a></li>
 						<li><a href="#contact" class="scroll">联系我们</a></li>
 					</ul>
 					<div class="clearfix"> </div>
@@ -139,6 +139,7 @@
 				<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;热衷于计算机技术，有较强的探索精神，主动学习的意识，学习时遇到问题的时候，有锲而不舍的精神。身边的
 人遇到计算机的各种问题，喜欢协助与其解决。对于计算机的操作有着极强的操作能力</p>
 				<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;主修课程: Linux、 hadoop、html5、JS、JQ、 BootStorp、python、Scratch、计算机应用基础、计算机网络、MySql 数据库、WindowsServer 服务器管理、PS 图形图像处理</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在校经历:经历描述:在校期间自主创业,利用自身对电脑以及打印机熟练操作的优势,成立打印工作室承接PS图形图像制作,海报制作,相片打印,以及电脑远程维修服务。单日收入超1000元</p>
 				<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;自主学习: JAVA、 C、微机原理与接口技术</p>
 			</div>
 			<div class="col-md-4 about-right">
@@ -167,19 +168,8 @@
 				</div>
 				<div class="col-md-6 work-right"> 
 					<h5><span class="glyphicon glyphicon-briefcase"> </span>兴隆县旭峰广告设计有限公司</h5>
-					<p>1、负责完成公司日常任的务安排,包括平面广告的设计、网页设计、静态页面等工作。
-					<br>
-2、负责公司对外日常工作宣传及广告、产品、活动的平面设计。
-<br>
-3、和策划、文案配合，按规定完成策划主题的视觉执行工作。
-<br>
-4、负责设计文档、素材、图片资料的整理工作。
-<br>
-5、摄影图片后期创意设定、执行与表现。
-<br>
-6、协助文案并负责完成创意提案PPT。
-<br>
-7、负责完成各种视觉事务。</p>
+					<p>工作描述:<br/>主要负责广告平面设计、制作及其它图文处理;企业宣传资料的设计、制作与创新;以及海报的制作印刷相片等。工作中能够熟练使用PS
+</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -190,21 +180,9 @@
 				<div class="col-md-6 work-left work-left2"> 
 					<h5>北京方圆和信息技术有限公司 <span class="glyphicon glyphicon-briefcase"> </span> </h5>
 					<p>
-						基本的税务软件软件维护，以及客户在使用税务软件的时候出现的问题，给予解决的方案
-						<br>
-					1,硬件维护:包括对计算机硬件设备的检查、清洁、维修和更换。例如,清理计算机内部灰尘、更换电源、硬盘等。
-					<br>
-					2,软件维护:包括对计算机操作系统、应用软件、安全软件等的更新、升级、修复和优化。例如,安装最新的操作系统补丁、更新杀毒软件等。
-					<br>
-					3,数据备份:对重要数据进行备份,以防数据丢失或损坏。备份可以通过外部硬盘、云存储等方式进行。
-					<br>
-					4.网络维护:包括对网络设备的维护和管理,例如路由器、交换机等。还包括对网络安全的监控和防范,例如防火墙、入侵检测等。
-					<br>
-					5,用户支持:对用户提供技术支持和解决问题。例如,解决用户电脑无法开机、软件无法运行等问题。
-					<br>
-					6,系统优化:对计算机系统进行优化,以提高系统性能和稳定性。例如,清理系统垃圾文件、优化启动项等。
-					<br>
-					7,安全管理:对计算机系统进行安全管理,以保护计算机系统和数据的安全。例如,设置密码、加密重要文件等。</p>
+						工作描述：<br />
+						负责到客户公司跟财务室会计进行对接,主要工作是对客户电脑的基本检查维护,税务软件升级,重要数据备份,以及解决客户在使用电脑或税务软件的过程中的问题进行答疑
+						</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -214,17 +192,29 @@
 				</div>
 				<div class="col-md-6 work-right"> 
 					<h5><span class="glyphicon glyphicon-briefcase"> </span>北京爱尔思信息技术有限公司</h5>
-					<p>金蝶EAS实施</p>
+					<p>工作描述:我的实习岗位是金蝶EAS系统实施专员,我的主要职责是负责金蝶EAS系统的实施工作。对客户的整车、供应链、二手车、售后、会员管理、等方面的业务流程。作为实施专员,我需要与客户沟通需求,根据客户提供的方案,进行系统配置和定制,以及进行培训和支持等工作,确保系统能够顺利地满足客户的业务需求。,</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
+			<div class="work-info">
+				<div class="col-md-6 work-right work-right2"> 
+					<h4>2024 </h4>
+				</div>
+				<div class="col-md-6 work-left work-left2"> 
+					<h5>北京万维信达信息技术有限公司 <span class="glyphicon glyphicon-briefcase"> </span> </h5>
+					<p>
+						工作描述：<br />
+						主要职责:负责新员工的入职培训:组织和实施新员工的IT设备和软件使用培训,确保他们能够快速熟悉公司的技术环境和工具。制作详细的培训资料和操作手册,为新员工提供清晰的指导和支持。对客户的邮箱问题,飞连使用问题进行答疑:及时响应客户关于邮箱设置、故障排除等问题的咨询,提供有效的解决方案。
+						</p>
+				</div>
+				
 			<div class="work-info"> 
 				<div class="col-md-6 work-right work-right2"> 
 					<!-- <h4>2014 - 2015 </h4> -->
 				</div>
 				<!-- <div class="col-md-6 work-left work-left2"> 
 					<h5> 河南工业大学就读参加结业考试 <span class="glyphicon glyphicon-briefcase"></span> </h5>
-					<p>2014年先后取得河南工业大学专科学历证书和郑州大学自考本科学历！ </p>
+	
 				</div> -->
 				<div class="clearfix"> </div>
 			</div>
@@ -240,7 +230,7 @@
 					<h4>2021</h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-education"> </span>河北工业职业技术大学</h5>
+					<h5><span class="glyphicon glyphicon-education"> </span><p style="color: white;">河北工业职业技术大学</p></h5>
 					<p>大数据技术</p>
 				</div>
 				<div class="clearfix"> </div>
@@ -279,61 +269,61 @@
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
 					</div>
-					<h6>UI DESIGN & DEVELOPER <span> 70% </span></h6>
+					<!-- <h6>UI DESIGN & DEVELOPER <span> 70% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 70%">
 						</div>
-					</div>
-					<h6>HTML/CSS<span>90% </span></h6>
+					</div> -->
+					<h6>电脑操作<span>90% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 90%">
 						</div>
 					</div>
-					<h6>CorelDRAW <span> 75% </span></h6>
-					<div class="progress">
+					<!-- <h6>CorelDRAW <span> 75% </span></h6> -->
+				<!-- 	<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 75%">
 						</div>
-					</div>
+					</div> -->
 				</div>
-				<div class="col-md-6 bar-grids">
+				<!-- <div class="col-md-6 bar-grids">
 					<h6>Adobe Illustrator <span> 85% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
-					</div>
-					<h6>SOCIAL MEDIA MARKETING<span> 95% </span></h6>
+					</div> -->
+					<!-- <h6>SOCIAL MEDIA MARKETING<span> 95% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 95%">
 						</div>
-					</div>
-					<h6>UX DEVELOPER<span>80% </span></h6>
+					</div> -->
+					<!-- <h6>UX DEVELOPER<span>80% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
-					</div>
-					<h6>C<span> 60% </span></h6>
+					</div> -->
+					<!-- <h6>C<span> 60% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 60%">
 						</div>
-					</div>
-				</div>
+					</div> -->
+				<!-- </div>
 				<div class="clearfix"> </div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 	<!--//education-->
 	<!--portfolio-->
 	<div id="projects" class="portfolio">
 		<div class="container">
-			<h3 class="title wow zoomInLeft animated" data-wow-delay=".5s">部分作品</h3>
+			<h3 class="title wow zoomInLeft animated" data-wow-delay=".5s">毕业证书</h3>
 			<div class="sap_tabs">			
 				<div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
 					<ul class="resp-tabs-list wow fadeInUp animated" data-wow-delay=".7s">
-						<li class="resp-tab-item"><span>All</span></li>
-						<li class="resp-tab-item"><span>Html</span></li>
-						<li class="resp-tab-item"><span> Photoshop</span></li>
-						<li class="resp-tab-item"><span>Cinema 4D</span></li>
-						<li class="resp-tab-item"><span>LOGO/VI</span></li>
+						<li class="resp-tab-item"><span>所有的</span></li>
+						<li class="resp-tab-item"><span>证书</span></li>
+						<li class="resp-tab-item"><span> 毕业证</span></li>
+						<li class="resp-tab-item"><span>档案</span></li>
+			
 					</ul>	
 					<div class="clearfix"> </div>	
 					<div class="resp-tabs-container">
@@ -341,11 +331,11 @@
 							<div class="tab_img">
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g1.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g1.jpg" class="swipebox" title="希望您能给我个工作的机会,望为贵公司效力!">
 											<img src="images/g1.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>苹果酒广告，莎拉喜欢看云。她很沮丧。</p>
+												<h3>我的<span> 毕业证</span></h3>
+												<p>学生时代已经结束</p>
 											</div>
 										</a>	
 									</div>
@@ -363,11 +353,11 @@
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g3.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g3.jpg" class="swipebox" title="毕业证">
 											<img src="images/g3.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>莎拉喜欢看云。她很沮丧。</p>
+												<h3>我的<span> 毕业证</span></h3>
+												<p>点击可查看大图。</p>
 											</div>
 										</a>	
 									</div>
@@ -397,33 +387,32 @@
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g6.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g6.jpg" class="swipebox" title="我的英语证书">
 											<img src="images/g6.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>莎拉喜欢看云。她很沮丧。</p>
+												<h3>我的<span>英语证书</span></h3>
+												<p>英语B级证书</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g7.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g7.jpg" alt="" class="img-responsive" />
+										<a href="images/g7.jpg" class="swipebox" title="炒股模拟大赛
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>莎拉喜欢看云。她很沮丧。</p>
+												<h3>炒股模拟大赛<span></span></h3>
+												<p>模拟大赛一等奖。</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g8.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g8.jpg" class="swipebox" title="毕业时发的档案">
 											<img src="images/g8.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>莎拉喜欢看云。她很沮丧。</p>
+												<h3>我的<span> 档案</span></h3>
+												<p>毕业时发放的档案</p>
 											</div>
 										</a>	
 									</div>
@@ -453,11 +442,11 @@
 								
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g5.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g5.jpg" class="swipebox" title="我的C1D驾驶证">
 											<img src="images/g5.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>莎拉喜欢看云。她很沮丧。</p>
+												<h3>我的<span> 驾驶证</span></h3>
+												<p>C1D</p>
 											</div>
 										</a>	
 									</div>
@@ -483,33 +472,33 @@
 							<div class="tab_img">
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g5.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g5.jpg" class="swipebox" title="C1D驾驶证">
 											<img src="images/g5.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>莎拉喜欢看云。她很沮丧。</p>
+												<h3>我的<span> 驾驶证</span></h3>
+												<p>C1D</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g6.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g6.jpg" class="swipebox" title="英语B级">
 											<img src="images/g6.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>莎拉喜欢看云。她很沮丧。</p>
+											<h3>我的<span>英语证书</span></h3>
+											<p>英语B级证书</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g7.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g7.jpg" class="swipebox" title="模拟大赛一等奖">
 											<img src="images/g7.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>莎拉喜欢看云。她很沮丧。</p>
+												<h3>炒股模拟大赛<span></span></h3>
+												<p>模拟大赛一等奖。</p>
 											</div>
 										</a>	
 									</div>
@@ -521,22 +510,22 @@
 							<div class="tab_img">
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g3.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g3.jpg" class="swipebox" title="我的毕业证">
 											<img src="images/g3.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>莎拉喜欢看云。她很沮丧。</p>
+												<h3>我的<span> 毕业证</span></h3>
+												<p>点击可查看大图。</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g1.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g1.jpg" class="swipebox" title="毕业证">
 											<img src="images/g1.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>莎拉喜欢看云。她很沮丧。</p>
+										<h3>我的<span> 毕业证</span></h3>
+										<p>学生时代已经结束</p>
 											</div>
 										</a>	
 									</div>
@@ -581,11 +570,11 @@
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g8.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="images/g8.jpg" class="swipebox" title="我的档案">
 											<img src="images/g8.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> Project</span></h3>
-												<p>莎拉喜欢看云。她很沮丧。</p>
+												<h3>我的<span>档案</span></h3>
+												<p>毕业时发的档案</p>
 											</div>
 										</a>	
 									</div>
@@ -692,7 +681,7 @@
 	<!--footer-->
 	<div class="footer">
 		<div class="container">
-			<p>©2023我的简历。所有权利保留|设计的</p>
+			<p>©2024我的简历。所有权利保留</p>
 		</div>
 	</div>
 	<!--//footer-->
